プロジェクト名修正

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,7 @@
-spring.application.name=NYA_resarvation
+spring.application.name=NYA_reservation
+spring.jpa.database=POSTGRESQL
+spring.datasource.url=jdbc:postgresql://localhost:5432/nya_reservation
+spring.datasource.username=postgres
+spring.datasource.password=root
+spring.mvc.hiddenmethod.filter.enabled=true
+logging.level.org.springframework.security=DEBUG
