--- a/.gitignore
+++ b/.gitignore
@@ -35,3 +35,11 @@ out/
 
 ### VS Code ###
 .vscode/
+/.gitattributes
+/build.gradle
+/gradlew
+/gradlew.bat
+/README.md
+/settings.gradle
+/.gradle
+/gradle
