無視リスト修正

--- a/.gitignore
+++ b/.gitignore
@@ -46,3 +46,14 @@ out/
 /HELP.md
 /README.md
 /gradle
+/settings.gradle
+/.gradle
+/.idea
+/build
+/gradle
+/.gitattributes
+/build.gradle
+/gradlew
+/gradlew.bat
+/HELP.md
+/README.md
