--- a/.gitignore
+++ b/.gitignore
@@ -46,3 +46,10 @@ out/
 /HELP.md
 /README.md
 /gradle
+/gradlew
+/gradlew.bat
+/HELP.md
+/README.md
+/settings.gradle
+/.gitattributes
+/build.gradle
