--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,5 @@ spring.datasource.username=postgres
 spring.datasource.password=root
 spring.mvc.hiddenmethod.filter.enabled=true
 logging.level.org.springframework.security=DEBUG
+
+spring.servlet.multipart.max-file-size=5MB
